k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phobos-shell-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phobos-shell
  template:
    metadata:
      labels:
        app: phobos-shell
    spec:
      serviceAccountName: phobos-backend-sa
      containers:
      - name: phobos-shell
        image: prim/phobos-shell:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
