k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: phobos-shell-service
  labels:
    type: mfe
spec:
  selector:
    app: phobos-shell
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
