k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phobos-shell-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/app-root: /index.html
  #   nginx.ingress.kubernetes.io/proxy-buffering: "on"
  #   nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
  #   nginx.ingress.kubernetes.io/proxy-buffers: "4 256k"
  #   nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "256k"
  #   nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
  #   nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
  #   nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: phobos-shell-service
              port:
                number: 80
